// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Card > Default story should render 1`] = `
<div
  className="rounded-lg bg-gray-50 dark:bg-slate-800 p-6 shadow-sm border border-gray-200 dark:border-slate-700"
>
  <h3
    className="text-xl font-bold mb-2"
  >
    Card Title
  </h3>
  <p>
    This is a card with some content inside it.
  </p>
</div>
`;

exports[`Card > Jumbotron story should render 1`] = `
<div
  className="rounded-lg bg-gray-50 dark:bg-slate-800 p-6 shadow-sm border border-gray-200 dark:border-slate-700 bg-gray-100 dark:bg-gray-700 p-12 text-center"
>
  <h1
    className="text-4xl font-bold mb-4"
  >
    404 Not Found!
  </h1>
  <p
    className="text-lg"
  >
    The page you are looking for was not found.
  </p>
</div>
`;

exports[`Card > WithCustomClass story should render 1`] = `
<div
  className="rounded-lg bg-gray-50 dark:bg-slate-800 p-6 shadow-sm border border-gray-200 dark:border-slate-700 bg-blue-100"
>
  <h3
    className="text-xl font-bold mb-2"
  >
    Custom Card
  </h3>
  <p>
    This card has a custom background color.
  </p>
</div>
`;
